--- a/.github/workflows/01-update_tag.yaml
+++ b/.github/workflows/01-update_tag.yaml
@@ -33,7 +33,7 @@ on:
 
 
 jobs:
-  update-helm-values:
+  update-helm-chart:
     outputs:
       COMMIT_REF: ${{ steps.commit-ref.outputs.COMMIT_REF }}
     runs-on: ubuntu-latest
